--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,20 @@
     width: 20rem;
 }
 
+.image--hidden {
+    display: none;
+}
+
+.zodiac-image {
+    display: block;
+}
+
+.modal__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
 .userYear, .userYearSubmit {
     padding: 0.5rem;
     border-radius: 10px;
@@ -26,4 +40,15 @@
 
 .userYearSubmit {
     width: 4rem;
+}
+
+.modal {
+    visibility: hidden;
+}
+
+.modal__inner--show {
+    visibility: visible;
+    width: 50vw;
+    height: 40vh;
+    margin: 0 auto;
 }
