--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,18 @@
     gap: 1rem;
 }
 
+@media (max-width: 38rem) {
+    .content {
+        padding: 1rem; 
+        text-align: center;
+    }
+
+}
+
 .title {
     margin-top: 8rem;
 }
+
 .image {
     width: 20rem;
 }
